# languageanalysis

./: README.md  pyproject.toml
langanalyzer/: __init__.py  core.py
