[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langanalyzer"
version = "1.0.0"
description = "Analyze file sizes and language statistics in a directory."
authors = [
    { name="Arnav Saxena", email="ArnavSaxena62@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/ArnavSaxena62/codestats"
